Added a profile picture and updated the introduction paragraph

--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
+										<span class="image left">
+											<img src="/images/IMG_0848.jpeg" alt="">
+										</span>
 										<p>
-											I received my first computer from my father when I was 8. From the moment I turned it on, I was fascinated by everything that this little grey box could do. In order to make that grey box do what I wanted it to do, however, I quickly learned that I would have to learn how to become a computer programmer. Ever since that day I have increased my knowledge of computer technology, computer programming, and computer security to pursue my passion for computer programming.
+											Programming has been a passion of mine ever since I recieved my first computer many years ago. Over the years I have done many
+											things to learn how to code, such as taking programming courses throughout my high school years, going to college for computer science
+											for a few semesters, and going to a bootcamp. I have made several projects along the way and have learned many technologies, some within
+											the span of a few weeks, and had to use those technologies to make amazing projects with a quick turnaround time. I have enjoyed my time
+											learning and now want to spend my time doing, with some learning along the way. I would love to use these skills and technologies at your company.
+											I know I would be a great fit. Keep scrolling to see more about my and different projects I have made. I know you'll find one that you'll like
 										</p>
 									</div>
 									<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
@@ -79,7 +87,6 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>Some examples of my work</p>
 								</header>
 								
 								<section>
