--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 											<img src="/images/IMG_0848.jpeg" alt="">
 										</span>
 										<p>
-											Programming has been a passion of mine ever since I recieved my first computer many years ago. Over the years I have done many
+											Programming has been a passion of mine ever since I received my first computer from my dad many years ago. Over the years I have done many
 											things to learn how to code, such as taking programming courses throughout my high school years, going to college for computer science
-											for a few semesters, and going to a bootcamp. I have made several projects along the way and have learned many technologies, some within
+											for a few semesters, and going to the App Academy coding bootcamp. I have made several projects along the way and have learned many technologies, some within
 											the span of a few weeks, and had to use those technologies to make amazing projects with a quick turnaround time. I have enjoyed my time
 											learning and now want to spend my time doing, with some learning along the way. I would love to use these skills and technologies at your company.
 											I know I would be a great fit. Keep scrolling to see more about my and different projects I have made. I know you'll find one that you'll like
