--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 											learning and now want to spend my time doing, with some learning along the way. I would love to use these skills and technologies at your company.
 											I know I would be a great fit. Keep scrolling to see more about my and different projects I have made. I know you'll find one that you'll like
 										</p>
+										<a href="./Resume Template.pdf" target="_blank">View my resume</a>
 									</div>
 									<!-- <span class="image"><img src="images/pic01.jpg" alt="" /></span> -->
 								</div>
@@ -89,7 +90,38 @@
 									<h2>Projects</h2>
 								</header>
 								
-								<section>
+								<ul class="features">
+									<li>
+										<span>
+											<img class='show-img' src="/images/retrogametracker.png" alt="Image of the index of Retro Game Tracker">
+										</span>
+										<h3>Retro Game Tracker</h3>
+										<p>A web application to help a user maintain their vast retro game collection</p>
+										<a href="https://retro-game-tracker.herokuapp.com/" target="_blank">Visit retro tracker</a> | 
+										<a href="https://github.com/equan1090/retro-tracker">See the source</a>
+									</li>
+									<li>
+										<span>
+											<img class='show-img' src="/images/notrobinhood.png" alt="Image of the index of !Robinhood">
+										</span>
+										<h3>!Robinhood</h3>
+										<p>A website designed to mimic the behavior of the loved investing site Robinhood.</p>
+										<a href="https://notrobinhood.herokuapp.com/" target="_blank">Visit !Robinhood</a> | 
+										<a href="https://github.com/Jguevara1208/RobinHood">See the source</a>
+									</li>
+									<li>
+										<span>
+											<img class='show-img' src="/images/macenter.png" alt="Image of the index of MAcenter">
+										</span>
+										<h3>MAcenter</h3>
+										<p>A website designed to help those searching for the perfect martial art to practice</p>
+										<a href="https://macenter.herokuapp.com/" target="_blank">Visit MAcenter</a> | 
+										<a href="https://github.com/goldeneye5671/MAcenter">See the source</a>
+									</li>
+								</ul>
+
+
+								<!-- <section>
 									<div class="table-wrapper">
 										<table>
 											<thead>
@@ -123,7 +155,7 @@
 											</tbody>
 										</table>
 									</div>
-								</section>
+								</section> -->
 							</section>
 					</div>
 
