Made it so github links open in a new tab

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 											<img class='show-img' src="/images/retrogametracker.png" alt="Image of the index of Retro Game Tracker">
 										</span>
 										<h3>Retro Game Tracker</h3>
-										<p>A web application to help a user maintain their vast retro game collection</p>
+										<p>A website to help a user maintain their vast retro game collection</p>
 										<a href="https://retro-game-tracker.herokuapp.com/" target="_blank">Visit retro tracker</a> | 
-										<a href="https://github.com/equan1090/retro-tracker">See the source</a>
+										<a href="https://github.com/equan1090/retro-tracker" target="_blank">See the source</a>
 									</li>
 									<li>
 										<span>
@@ -107,7 +107,7 @@
 										<h3>!Robinhood</h3>
 										<p>A website designed to mimic the behavior of the loved investing site Robinhood.</p>
 										<a href="https://notrobinhood.herokuapp.com/" target="_blank">Visit !Robinhood</a> | 
-										<a href="https://github.com/Jguevara1208/RobinHood">See the source</a>
+										<a href="https://github.com/Jguevara1208/RobinHood" target="_blank">See the source</a>
 									</li>
 									<li>
 										<span>
@@ -116,7 +116,7 @@
 										<h3>MAcenter</h3>
 										<p>A website designed to help those searching for the perfect martial art to practice</p>
 										<a href="https://macenter.herokuapp.com/" target="_blank">Visit MAcenter</a> | 
-										<a href="https://github.com/goldeneye5671/MAcenter">See the source</a>
+										<a href="https://github.com/goldeneye5671/MAcenter" target="_blank">See the source</a>
 									</li>
 								</ul>
 
