--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
+  <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
   <!-- <meta content="Mashup templates have been developped by Orson.io team" name="author"> -->
 
   <!-- Disable tap highlight on IE -->
