--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
               </div>
               <div class="col-md-8">
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>My journey to becoming a Software Developer started when I received my first computer in 2009 from my Dad. It had a 2.1GB hard disc and a large 144MB of ram. When I turned it on for the first time I was in awe. How could something so small do so much? How did this machine know what to do? When I asked my dad about these things he told me that a team of programmers told the computer what to do through code. Ever since that day I have wanted to do something in the software field.</p>
 
               </div>
             </div>
