--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Anthony Seefried - SDET</title>  
 
 <link href="./main.d8e0d294.css" rel="stylesheet"></head>
 
 <body class="">
 
 <!-- Add your content of header -->
-<div class="background-color-layer" style="background-image: url('assets/images/img-01.jpg')"
+<div class="background-color-layer" style="background-image: url('assets/images/anthony-seefried.jpeg')"
 ></div>
 <main class="content-wrapper">
   <header class="white-text-container section-container">
